--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -26,4 +26,46 @@
     svg{
         cursor: pointer;
     }
+    .skip-back, .play, .skip-forward {
+        color:#b5c7ff;
+        font-weight: 800;
+    }
 }
+
+input[type=range] {
+    height: 32px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 8px;
+    cursor: pointer;
+    animate: 0.2s;
+    border-radius: 25px;
+    border: 1px solid #b5c7ff;
+  }
+
+  input[type=range]:focus {
+    outline: none;
+  }
+
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1px 1px 1px #828282;
+    border: 1px solid #b5c7ff;
+    height: 24px;
+    width: 25px;
+    border-radius: 50px;
+    background: #b5c7ff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -9px;
+  }
+
+  input[type=range]::-ms-fill-upper {
+    background: #2497E3;
+    border: 0px solid #000000;
+    border-radius: 2px;
+    box-shadow: 0px 0px 0px #000000;
+  }
